einstellung_derive/src/trybuild_tests/validate_wrong_argument_type.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/validate_wrong_argument_type.rs
  |
  | #[derive(Config)]
  |          ------ expected due to this
  | struct ServerConfig {
  |     #[config(validate = validate_port)]
  |                         ^^^^^^^^^^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `for<'a> fn(&'a u16) -> Result<(), _>`
                found fn item `for<'a> fn(&'a std::string::String) -> Result<(), Box<(dyn StdError + 'static)>> {validate_port}`

error[E0308]: mismatched types
 --> src/trybuild_tests/validate_wrong_argument_type.rs
  |
  |       #[config(validate = validate_port)]
  |                           ^------------
  |                           |
  |  _________________________arguments to this function are incorrect
  | |
  | |     port: u16,
  | |________^ expected `&String`, found `&u16`
  |
  = note: expected reference `&std::string::String`
             found reference `&u16`
note: function defined here
 --> src/trybuild_tests/validate_wrong_argument_type.rs
  |
  | pub fn validate_port(_: &String) -> Result<(), Box<dyn std::error::Error>> {
  |        ^^^^^^^^^^^^^ ----------
